# secure-rag-brain

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-infra.yml
aws-infra/: lambda_handler.py  requirements.txt  search_handler.py  template.yaml
aws-infra/tests/: conftest.py  test_lambda_handler.py
reports/: verification_report.md
src/: app.py  requirements.txt
src/tests/: conftest.py  test_app.py
supabase/: config.toml  seed.sql
supabase/functions/document-search/: index.ts
supabase/functions/document-triage/: deno.json  index.ts
supabase/migrations/: 20260718000000_init_schema.sql  20260718000001_rls_policies.sql  20260718000002_search_rpc.sql
