[project]
name = "secure-rag-brain"
version = "1.0.0"
description = "Hybrid Edge-Cloud Data Triage Architecture with PII Isolation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Raina Wells", email = "raina@wells.dev"}
]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "supabase>=2.3.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "boto3>=1.34.0",
    "moto>=4.2.0",
    "aws-sam-cli>=1.100.0",
]

[project.urls]
Homepage = "https://github.com/rwells489/secure-rag-brain"
Repository = "https://github.com/rwells489/secure-rag-brain"
Issues = "https://github.com/rwells489/secure-rag-brain/issues"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint]
fixable = ["I", "F", "E", "W", "C4", "UP"]
per-file-ignores = { "src/app.py" = ["W291", "W293"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests", "src/tests", "aws-infra/tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true